@@ -4,7 +4,7 @@ import utils.complex.Complex;
 
 import java.util.LinkedHashMap;
 import java.util.List;
-import java.util.Objects;
+import java.util.stream.Collectors;
 
 public class CLIArgsParser {
 
@@ -14,6 +14,8 @@ public class CLIArgsParser {
         private final String alias;
         private Object value;
         private final Object fallbackValue;
+
+        // TODO OptionBuilder
 
         public Option(String name, String alias, boolean required, Object fallbackValue) {
             this(name, alias, required, null, fallbackValue);
@@ -118,15 +120,15 @@ public class CLIArgsParser {
                 throw new IllegalArgumentException(String.format("Argument '%s | %s' is missing", o.getName(), o.getAlias()));
         });
         // Parsing only accepted options
-        List<String> strName = this.acceptedOptions.stream().map(Option::getName).toList();
-        List<String> strAlias = this.acceptedOptions.stream().map(Option::getAlias).toList();
+        List<String> strName = this.acceptedOptions.stream().map(Option::getName).collect(Collectors.toList());
+        List<String> strAlias = this.acceptedOptions.stream().map(Option::getAlias).collect(Collectors.toList());
         givenOptions.forEach((key, val) -> {
             if ( strName.contains(key) || strAlias.contains(key)) {
                 var value = tryParse(val);
                 assert value != null;
 
                 String finalKey = key;
-                List<Option> opt = this.acceptedOptions.stream().filter(o -> o.getAlias().equals(finalKey)).toList();
+                List<Option> opt = this.acceptedOptions.stream().filter(o -> o.getAlias().equals(finalKey)).collect(Collectors.toList());
                 if (opt.size() == 1)
                     key = opt.get(0).getName();
 
@@ -177,20 +179,11 @@ public class CLIArgsParser {
         return this.acceptedOptions
                 .stream()
                 .filter(Option::isRequired)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public LinkedHashMap<String, Option> getProvidedOptions() {
         return providedOptions;
-    }
-
-    public String getUsage() {
-        return """
-               Usage :
-                  ./Fractale -c=... <-s=...> <-f=2> <-b=0.2> <-r=[100; 360]>
-                  
-                  Where <...> is optional, [...] is a value you need to enter.
-               """;
     }
 
 }
